Refactor: Start compatibility with spigot 1.8 and Java 8. (Next step is ConfigLib). Add: "stripped" placeholder, this placeholder return int value without currency suffix